--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "matplotlib==3.9.0",
-    "openai==1.55.3",
+    "openai==1.82.0",
     "pandas==2.1.3",
     "python-dotenv==1.0.0",
     "requests==2.31.0",
@@ -19,5 +19,5 @@ dependencies = [
     "scrapy==2.11.0",
     "beautifulsoup4==4.12.2",
     "azure-ai-projects==1.0.0b10",
-
+    "redis==6.1.0",
 ]
